Issue-#32: Remove Java SecurityManager
Problem:
Java Security is deprecated and up for removal. The project should not support
it any further.

Solution:
Remove all SecurityManager related code.